--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ springdoc.api-docs.path = get-openapi
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=maanand2k@gmail.com
-spring.mail.password=dsbnoftbutshsxyy
+spring.mail.username=xxxxx
+spring.mail.password=yyyyyyy
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
