--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-elasticsearch.hostandport = localhost:9200
+elasticsearch.hostandport = 10.163.17.52:9200
 springdoc.swagger-ui.path = get-swagger
 springdoc.api-docs.path = get-openapi
 
